test/negative/204_while_cond_nonbool.fx
// expect: bool
while 1 {
    break
}
